# mandelbrot-rust

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust-broken_windows.yml  rust-non_windows.yaml  rust.yml
archive/other/: test.txt  why.txt
src/: bitreader.rs  cli.rs  color_map.rs  exif.rs  exif_writer.rs  exiftag.rs  generator.rs  main.rs  mandelbrot.rs  png_writer.rs  rexif.rs
