[package]
name = "mandelbrot-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
image = "0.24.3"
clap = { version = "3.2.22", features = ["derive"] }
miniz_oxide = "0.6.2"
deflate = "1.0.0"
crc = "3.0.0"
gexiv2-sys = "1.2"
libc = "0.2"
# gexiv2-sys = {version = "1.2", default-features = false, features = ["static"]}

[build]
rustflags = ["-C", "target-feature=+crt-static"]
